
[package]
name = "TBV-Rust-SDK"
version = "0.1.2"
authors = ["Your Name <your.email@example.com>"]
description = "Rust SDK for the TBV application and CLI"
license = "MIT"
repository = "https://github.com/KeeganBeuthin/TBV-Rust-SDK.git"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]